<resources>
    <string name="app_name">Albumz</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="form_email">Email</string>
    <string name="form_name">Pseudo</string>
    <string name="form_password">Mot de passe</string>
    <string name="form_password_confirmed">Confirmation mot de passe</string>
    <string name="form_register_submit">S\'enregistrer !</string>
    <string name="form_login_submit">Se connecter !</string>
</resources>


