<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">


    <ProgressBar
        android:id="@+id/progressBarAuth"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:text="Nous rejoindre" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/form_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_name_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/form_name_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_name"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/form_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_password_confirmed_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/form_password_confirmed_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_password_confirmed"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="30dp"
        android:text="@string/form_register_submit" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_green_light"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:text="Déjà un compte ?" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/form_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/form_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="30dp"
        android:text="@string/form_login_submit" />

</LinearLayout>
</ScrollView>
